# push_swap

./: CMakeLists.txt  Makefile  exit.c  ft_lstadd_back.c  ft_lstlast.c  ft_number.c  ft_sorting.c  push_swap.c  push_swap.h  sort_array.c  stacks.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_itoa.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  (+1 more)
source/: ft_atoi.c  ft_lst_size.c
source/checks/: check_dups.c
source/push/: pushs.c
source/rotates/: reverse_rotates.c  rot.c
source/sorting/: ft_sorting.c  huge_elems.c  main_sorting.c
source/stacks/: ft_get_max.c  ft_lists.c
source/swaps/: ft_swaps.c
sources/: ft_algos.c  ft_del_last.c  ft_lstlast.c  ft_new_elem.c  ft_stack_add_back.c  ft_stack_add_front.c  ft_stack_size.c
sources/rotates/: reverse.c
